Added the process to import the videos and transcode the ones that aren't mp4

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,9 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 MEDIA_STORAGE_PATH=/storage
+
+ENCODE_REDIS_HOST=127.0.1.1
+ENCODE_REDIS_PASSWORD=null
+ENCODE_REDIS_PORT=6379
+ENCODE_REDIS_DATABASE=4
+ENCODE_REDIS_QUEUE=una
