--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
+        "pbmedia/laravel-ffmpeg": "^8.5",
+        "php-ffmpeg/php-ffmpeg": "^1.2",
         "spatie/laravel-medialibrary": "^11.7",
         "spatie/laravel-tags": "^4.6"
     },
