Refactored media transcoding pipeline, removed deprecated tags, and introduced taxonomy management.

--- a/.env.example
+++ b/.env.example
@@ -65,4 +65,10 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-MEDIA_STORAGE_PATH=
+MEDIA_DISK=s3
+
+CONTENT_DATA_PATH=
+MAX_RAW_IMPORT=
+
+MAIN_CATEGORY=
+ALT_CATEGORY=
