--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aliziodev/laravel-taxonomy": "^2.6",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.33",
         "laravel/tinker": "^2.10.1",
         "livewire/volt": "^1.7.0",
+        "nunomaduro/essentials": "^0.1.0",
         "pbmedia/laravel-ffmpeg": "^8.7",
-        "spatie/laravel-medialibrary": "^11.14",
-        "spatie/laravel-tags": "^4.10"
+        "spatie/laravel-medialibrary": "^11.14"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
