--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
-        "aliziodev/laravel-taxonomy": "^2.6",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.33",
+        "laravel/scout": "^10.19",
         "laravel/tinker": "^2.10.1",
         "livewire/volt": "^1.7.0",
+        "meilisearch/meilisearch-php": "^1.16",
         "nunomaduro/essentials": "^0.1.0",
         "pbmedia/laravel-ffmpeg": "^8.7",
-        "spatie/laravel-medialibrary": "^11.14"
+        "spatie/laravel-data": "^4.17",
+        "spatie/laravel-medialibrary": "^11.14",
+        "spatie/laravel-tags": "^4.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
