--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,13 @@
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite --kill-others"
         ],
+        "rector": "rector",
+        "lint": "pint",
+        "test:rector": "rector --dry-run",
+        "test:lint": "pint --test",
+        "test:types": "phpstan analyse --ansi --memory-limit=2G",
+        "test:unit": "pest --colors=always --parallel --coverage --exactly=100",
+        "test:type-coverage": "pest --type-coverage --min=100",
         "test": [
             "@php artisan config:clear --ansi",
             "@test:type-coverage",
