Add Jellyfin API integration module and refactor video import system
  - Create new JellyfinApi module with service provider, facades, and API traits
  - Add VideoItem DTO for structured video data handling
  - Refactor ImportVideoJob and ImportVideoService to use VideoItem instead of raw arrays
  - Update ImportVideosService to fetch videos from Jellyfin API instead of filesystem scanning
  - Add Jellyfin configuration with environment variables
  - Update composer.json to include AWS S3 dependency and module autoloading
  - Remove cached category lookups and name-based hashing in favor of Jellyfin item IDs

--- a/.env.example
+++ b/.env.example
@@ -79,3 +79,8 @@ FFPROBE_BINARIES=
 SCOUT_QUEUE=true
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=
+
+JELLYFIN_SERVER_URL=
+JELLYFIN_TOKEN=
+JELLYFIN_APPLICATION="${APP_NAME}"
+JELLYFIN_VALIDATE_SSL=false
