--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "ext-curl": "*",
         "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.33",
         "laravel/scout": "^10.19",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "*",
         "livewire/volt": "^1.7.0",
         "meilisearch/meilisearch-php": "^1.16",
         "nunomaduro/essentials": "^0.1.0",
@@ -41,7 +43,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Modules\\": "modules/"
         }
     },
     "autoload-dev": {
@@ -88,6 +91,9 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "aliases": {
+            "Jellyfin": "Modules\\JellyfinApi\\Facades\\Jellyfin"
         }
     },
     "config": {
