Implement MongoDB-based content feed system with frontend UI
  - Add MongoDB integration via `mongodb/laravel-mongodb` package
  - Create `Feed` model using MongoDB to store denormalized content items with expiry
  - Add `GetFeedAction` and update `CreateFeedService` to use new feed configuration
  - Implement `HomeController` to display paginated feed items
  - Refactor `ContentItem` DTO to include ID and expires_at fields
  - Update `Content` model to include ID in searchable array
  - Create application layout (`app.blade.php`) and navbar component with dark mode support
  - Replace welcome page with home view
  - Move feed configuration from `config/content.php` to dedicated `config/feed.php`
  - Add MongoDB connection config and environment variables
  - Add Pail storage directory to version control

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,9 @@ DB_DATABASE=tube
 DB_USERNAME=root
 DB_PASSWORD=
 
+MONGO_DB_DATABASE=tube
+MONGO_DB_DSN=
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=604800
 SESSION_ENCRYPT=true
