--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "league/flysystem-aws-s3-v3": "*",
         "livewire/volt": "^1.7.0",
         "meilisearch/meilisearch-php": "^1.16",
+        "mongodb/laravel-mongodb": "^5.5",
         "nunomaduro/essentials": "^0.1.0",
         "pbmedia/laravel-ffmpeg": "^8.7",
         "spatie/laravel-data": "^4.17",
