Add ffmpeg log channel and make filesystem paths configurable
- Introduce `ffmpeg` log channel to manage FFmpeg-specific logs.
- Update filesystem paths (`transcode`, `processing`, `download`) to use environment variables.
- Adjust `.env.example` to include new path placeholders.
- Set default log channel for FFmpeg to `ffmpeg` in configuration.

--- a/.env.example
+++ b/.env.example
@@ -72,7 +72,12 @@ MEDIA_DISK=s3
 
 ENABLE_ENCODE_JOBS=true
 
+TRANSCODE_PATH=
+PROCESSING_PATH=
+DOWNLOAD_PATH=
+CONTENT_STORAGE_PATH=
 CONTENT_DATA_PATH=
+
 MAX_RAW_IMPORT=
 
 MAIN_CATEGORY=
