Refactor category handling and enhance navigation structure
- Replace session function with `Session::put` in `SwitchCategoryController` for better consistency.
- Add `icon` column to categories table, migration scripts for default values, and related constants.
- Update `HomeController` and `AppServiceProvider` to include category icons in shared data.
- Modify navbar component to display category icons and improve maintainability via `@class` directive.
- Introduce `blade-ionicons` package for icon support.
- Add `getIcon` and `getName` methods to `Category` model for cached access to category data.
- Enhance package and composer lock files with updated dependencies (`blade-ionicons`).
- Cleanup and streamline model handling (`unguard`, `strict mode`) and database commands configuration.

--- a/.env.example
+++ b/.env.example
@@ -76,7 +76,9 @@ CONTENT_DATA_PATH=
 MAX_RAW_IMPORT=
 
 MAIN_CATEGORY=
+MAIN_CATEGORY_ICON=
 ALT_CATEGORY=
+ALT_CATEGORY_ICON=
 
 FFMPEG_BINARIES=
 FFPROBE_BINARIES=
