Implement Selected Video downloading flow with new model, services, and jobs
- Add `SelectedVideo` model with scopes and utility methods.
- Introduce `DownloadSelectedVideoService` to execute video downloads.
- Create `CheckSelectedVideosService` to manage pending downloads.
- Add corresponding jobs (`DownloadSelectedVideoJob`, `CheckSelectedVideosJob`) for asynchronous execution.
- Define `DownloadStatusItem` DTO for tracking download progress.
- Add `downloader-supervisor` to Horizon configuration.
- Extend `.env.example` and configurations to include downloader-specific settings.
- Update console routes to schedule `CheckSelectedVideosJob`.
- Improve error-handling across associated jobs with `MaxAttemptsExceededException` logging.

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,14 @@ DB_DATABASE=tube
 DB_USERNAME=root
 DB_PASSWORD=
 
+BOOGIE_DB_CONNECTION=boogie
+BOOGIE_DB_HOST_READ=127.0.0.1
+BOOGIE_DB_HOST_WRITE=127.0.0.1
+BOOGIE_DB_PORT=3306
+BOOGIE_DB_DATABASE=tube
+BOOGIE_DB_USERNAME=root
+BOOGIE_DB_PASSWORD=
+
 MONGO_DB_DATABASE=tube
 MONGO_DB_DSN=
 
