--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.3",
         "ext-curl": "*",
         "ext-fileinfo": "*",
+        "davidhsianturi/blade-bootstrap-icons": "^2.1",
         "faisal50x/blade-ionicons": "^1.1",
         "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^12.0",
