--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "davidhsianturi/blade-bootstrap-icons": "^2.1",
         "faisal50x/blade-ionicons": "^1.1",
         "http-interop/http-factory-guzzle": "^1.2",
+        "landrok/language-detector": "^1.4",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.33",
         "laravel/scout": "^10.19",
