Remove deprecated job and service, enhance tag processing, and update configurations
- Remove `CreateFeedJob` and `CreateFeedService` as they are no longer in use.
- Introduce `TagsProcessor` trait to centralize tag-related logic across services.
- Enhance `TitleParserLibrary` with improved title tag processing.
- Update `CreateTagsFromPathCommand` to leverage shared tag processing.
- Modify `ImportVideoService` to include tag parsing enhancements.
- Add `MarkNotificationReadAction` for efficiently marking notifications as read.
- Refactor configurations to streamline paths and tag-related settings.
- Adjust mail and DTO logic to support enhanced encoding error handling.

--- a/.env.example
+++ b/.env.example
@@ -76,18 +76,21 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-MEDIA_DISK=s3
+MEDIA_DISK=
 
-ENABLE_ENCODE_JOBS=true
+BASE_STORAGE=
+TRANSCODE_PATH="${BASE_STORAGE}/transcode"
+PROCESSING_PATH="${BASE_STORAGE}/processing"
+DOWNLOAD_PATH="${BASE_STORAGE}/download"
+CONTENT_STORAGE_PATH="${BASE_STORAGE}/content"
 
-TRANSCODE_PATH=
-PROCESSING_PATH=
-DOWNLOAD_PATH=
-CONTENT_STORAGE_PATH=
-CONTENT_DATA_PATH=
 CLIENT_CONTENT_DATA_PATH=
+CONTENT_DATA_PATH=
+SELECTED_VIDEOS_DOWNLOAD_PATH=
 
 MAX_RAW_IMPORT=
+MINIMUM_VIDEO_DURATION=
+ENABLE_ENCODE_JOBS=
 
 MAIN_CATEGORY=
 MAIN_CATEGORY_ICON=
@@ -108,3 +111,4 @@ JELLYFIN_VALIDATE_SSL=false
 
 CONTENT_SHARED_TAGS=
 CONTENT_BANDED_TAGS=
+CONTENT_TITLE_TAGS=
