--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
+        "alpinejs": "^3.14.3",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "flowbite": "^3.1.2",
+        "htmx.org": "^2.0.4",
         "laravel-vite-plugin": "^2.0",
         "tailwindcss": "^4.0.7",
         "vite": "7.1.5"
