Update `horizon` and `queue` configurations, refactor jobs, and enhance preview logic.
- Add `thumbs` queue and `thumbnailer-supervisor` for Redis-based thumbnail processing.
- Introduce supervised queue connections for encoders and transcoders for better worker management.
- Refactor jobs (`TranscodeVideoJob`, `ExtractThumbnailsJob`, `EncodeDownscaleJob`) to use appropriate queues.
- Add `max_preview_length` configuration to control preview generation length.
- Introduce `DisableContentCommand` for content deactivation via CLI.
- Enhance `CreatePreviewsService` with section limits based on `max_preview_length`.
- Adjust observer caching logic and update `.env.example` placeholders.

--- a/.env.example
+++ b/.env.example
@@ -113,3 +113,8 @@ CONTENT_SHARED_TAGS=
 CONTENT_BANDED_TAGS=
 CONTENT_TITLE_TAGS=
 CONTENT_DE_TITLE_WORDS=
+
+PREVIEW_PADDING_TIME=15
+PREVIEW_SECTIONS=3
+PREVIEW_SECTION_LENGTH=3
+PREVIEW_MAX_LENGTH=21
