--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "spatie/laravel-tags": "^4.10"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.16",
         "fakerphp/faker": "^1.23",
         "laradumps/laradumps": "^4.5",
         "larastan/larastan": "^3.7",
