Refactor special tags handling, feed management, and title processing across services and commands
- Add support for `de_title_words` and `re_title_words` special tags with associated parsing in `TitleParserLibrary` and `TagsProcessor`.
- Introduce `SyncFeedRecordsService` to encapsulate feed recreation logic, improving modularity and readability.
- Update `RecreateFeedCommand` to use `SyncFeedRecordsService` for streamlined execution.
- Enhance DTOs and models with new attributes like `length`, `duration`, `resolution`, and `is_hd` to support additional metadata.
- Update migrations and seeders to include `value` field in `SpecialTag` and new types like `re_title_words`.
- Refactor tag-related methods and constants for cleaner and reusable logic across services.
- Add new command `StopDownloadSelectedCommand` to manage selected downloads, with Redis and cache handling improvements.

--- a/.env.example
+++ b/.env.example
@@ -113,6 +113,7 @@ CONTENT_SHARED_TAGS=
 CONTENT_BANDED_TAGS=
 CONTENT_TITLE_TAGS=
 CONTENT_DE_TITLE_WORDS=
+CONTENT_RE_TITLE_WORDS=
 
 PREVIEW_PADDING_TIME=15
 PREVIEW_SECTIONS=3
