Add `ContentController` with index route and implement content listing caching
- Introduce `ContentController` and register `content.list` route.
- Enhance `ContentItem` DTO with `created_at` and `updated_at` properties.
- Add video and thumbnail loading methods to `ContentItem` for modularization.
- Update navbar link to use the new content listing route.
- Upgrade packages, including `laravel/framework` and `spatie/laravel-medialibrary`.

--- a/.env.example
+++ b/.env.example
@@ -105,6 +105,7 @@ SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=
 
 JELLYFIN_SERVER_URL=
+JELLYFIN_SERVER_ID=
 JELLYFIN_TOKEN=
 JELLYFIN_APPLICATION="${APP_NAME}"
 JELLYFIN_VALIDATE_SSL=false
