--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,7 @@
 includes:
     - vendor/larastan/larastan/extension.neon
     - vendor/nesbot/carbon/extension.neon
+    - phpstan-baseline.neon
 
 parameters:
     checkModelProperties: false
@@ -10,7 +11,7 @@ parameters:
     paths:
         - app/
 
-    level: 6
+    level: 4
 
     ignoreErrors:
         - identifier: missingType.generics
