Add "Feature" functionality for videos
- Introduce a "Feature" button in `video.blade.php` with htmx integration for marking videos as featured.
- Add `featured` field to `Content` and `Feed` models with corresponding database migration.
- Create `ContentFeatureAction` to handle feature marking logic.
- Refactor `VideoStatusController`, introducing `VideoEngageController` to separate handling of viewed/liked/featured actions.
- Update routes and Blade templates to reflect the new "Feature" functionality.
- Enhance video preview logic to dynamically load sources on hover for improved performance.

--- a/.env.example
+++ b/.env.example
@@ -120,3 +120,6 @@ PREVIEW_PADDING_TIME=15
 PREVIEW_SECTIONS=3
 PREVIEW_SECTION_LENGTH=3
 PREVIEW_MAX_LENGTH=21
+
+CONTENT_FEATURED_TITLE=
+CONTENT_FEATURED_ICON=
